--- a/translation/de/sabbamitta/sutta/mn/mn139_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn139_translation-de-sabbamitta.json
@@ -72,7 +72,7 @@
   "mn139:9.1": "‚Wisst, wie man verschiedene Arten von Glück bewertet. ",
   "mn139:9.2": "Wenn ihr das wisst, weiht euch der inneren Seligkeit.‘ ",
   "mn139:9.3": "Das habe ich gesagt, aber inwiefern habe ich es gesagt? ",
-  "mn139:9.4": "Es gibt fünf Arten von Sinnesreizen. ",
+  "mn139:9.4": "Es gibt fünf Arten sinnlicher Erregung. ",
   "mn139:9.5": "Welche fünf? ",
   "mn139:9.6": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "mn139:9.7": "Töne, die das Ohr erkennt … ",
