--- a/translation/de/sabbamitta/sutta/mn/mn139_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn139_translation-de-sabbamitta.json
@@ -79,7 +79,7 @@
   "mn139:9.8": "Düfte, die die Nase erkennt … ",
   "mn139:9.9": "Geschmäcke, die die Zunge erkennt … ",
   "mn139:9.10": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "mn139:9.11": "Das sind die fünf Arten von Sinnesreizen. ",
+  "mn139:9.11": "Das sind die fünf Arten sinnlicher Erregung. ",
   "mn139:9.12": "Das Glück und die Freude, die von diesen fünf Arten von Sinnesreizen kommen, nennt man Sinnenfreuden – ein schmutziges, gewöhnliches, unedles Glück. ",
   "mn139:9.13": "Solches Glück soll man nicht entwickeln und pflegen und viel daraus machen, sondern man soll es fürchten, sage ich. ",
   "mn139:9.14": "Da tritt ein Mönch oder eine Nonne, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; da gibt es die Ekstase und die Seligkeit der Abgeschiedenheit, während man den Geist ausrichtet und hält. ",
