--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -123,7 +123,7 @@
   "dn23:9.20": "dem Mann prunkvolle Kränze, prunkvolles Make-up und prunkvolle Kleider zu bringen, ",
   "dn23:9.21": "und sie täte das. ",
   "dn23:9.22": "Dann würdest du sie anweisen, ",
-  "dn23:9.23": "den Mann zum Pfahlhaus hinaufzubringen und ihn dort mit den fünf Arten von Sinnesreizen zu versorgen, ",
+  "dn23:9.23": "den Mann zum Pfahlhaus hinaufzubringen und ihn dort mit den fünf Arten sinnlicher Erregung zu versorgen, ",
   "dn23:9.24": "und sie täte das. ",
   "dn23:9.25": "Was meinst du, Stammesfürst? ",
   "dn23:9.26": "Nun ist dieser Mann schön gebadet und geölt, Haar und Bart sind frisiert, er ist mit Kränzen und Armbändern geschmückt, in Weiß gekleidet, mit den fünf Arten von Sinnesreizen versorgt und ausgestattet oben im königlichen Pfahlhaus. Würde er wieder zurück in die Jauchegrube eintauchen wollen?“ ",
