--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -160,7 +160,7 @@
   "dn23:11.2": "Hundert Jahre im Bereich der Menschen entsprechen einem Tag und einer Nacht bei den Göttern der Dreiunddreißig. Dreißig solcher Tage machen einen Monat aus. Die Lebensdauer der Götter der Dreiunddreißig beträgt tausend dieser göttlichen Jahre. ",
   "dn23:11.3": "Was ist dann mit deinen Freunden, die unter den Göttern der Dreiunddreißig wiedergeboren sind, nachdem sie Gutes getan haben: ",
   "dn23:11.4": "Wenn sie denken: ",
-  "dn23:11.5": "‚Zuerst vergnüge ich mich zwei oder drei Tage lang mit den fünf Arten von himmlischen Sinnesreizen, mit denen ich versorgt und ausgestattet bin. Dann werde ich zu Pāyāsi zurückgehen und ihm berichten, ",
+  "dn23:11.5": "‚Zuerst vergnüge ich mich zwei oder drei Tage lang mit den fünf Arten sinnlicher Erregung der Götter, mit denen ich versorgt und ausgestattet bin. Dann werde ich zu Pāyāsi zurückgehen und ihm berichten, ",
   "dn23:11.6": "dass es ein Leben nach dem Tod gibt.‘ ",
   "dn23:11.7": "Würden sie zu dir zurückkommen, um dir zu berichten, ",
   "dn23:11.8": "dass es ein Leben nach dem Tod gibt?“ ",
