--- a/translation/de/sabbamitta/sutta/an/an5/an5.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.55_translation-de-sabbamitta.json
@@ -36,7 +36,7 @@
   "an5.55:7.4": "spricht sie Worte, die bezaubern. ",
   "an5.55:7.5": "Es ist nicht gut, bei einer solchen Person zu sitzen, ",
   "an5.55:7.6": "selbst wenn sie entstellt oder tot ist. ",
-  "an5.55:8.1": "Diese fünf Arten von Sinnesreizen ",
+  "an5.55:8.1": "Diese fünf Arten sinnlicher Erregung ",
   "an5.55:8.2": "zeigen sich am Körper einer Frau: ",
   "an5.55:8.3": "Bilder, Töne, Düfte, Geschmäcke ",
   "an5.55:8.4": "und so entzückende Berührungen –  ",
