--- a/translation/de/sabbamitta/sutta/an/an6/an6.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.26_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "an6.26:7.4": "Auch ich besitze die gleiche Art von Vertrauen, sittlichem Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit.‘ ",
   "an6.26:7.8": "Zu einer Zeit, zu der ein edler Schüler sich auf Vertrauen, sittliches Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit der Gottheiten und auf die gleichen Eigenschaften bei sich selbst besinnt, ist sein Geist nicht voller Gier, Hass und Täuschung. ",
   "an6.26:7.9": "Zu dieser Zeit ist sein Geist unbeirrbar. Die Gier hat er hinter sich gelassen, ist frei von ihr und hat sich über sie erhoben. ",
-  "an6.26:7.10": "‚Gier‘ ist ein Ausdruck für die fünf Arten von Sinnesreizen. ",
+  "an6.26:7.10": "‚Gier‘ ist ein Ausdruck für die fünf Arten sinnlicher Erregung. ",
   "an6.26:7.11": "Dieser edle Schüler meditiert mit einem Herzen, ganz wie der Raum – weit, ausgedehnt, grenzenlos, frei von Feindschaft und bösem Willen. ",
   "an6.26:7.12": "Indem sie sich darauf stützen, werden manche Lebewesen so rein. ",
   "an6.26:8.1": "Es ist unglaublich, es ist erstaunlich, ",
