--- a/translation/de/sabbamitta/sutta/an/an9/an9.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.42_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "an9.42:3.6": "Düfte, die die Nase erkennt … ",
   "an9.42:3.7": "Geschmäcke, die die Zunge erkennt … ",
   "an9.42:3.8": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "an9.42:3.9": "Das sind die fünf Arten von Sinnesreizen, die vom Buddha ‚Enge‘ genannt werden. ",
+  "an9.42:3.9": "Das sind die fünf Arten sinnlicher Erregung, die vom Buddha ‚Enge‘ genannt werden. ",
   "an9.42:4.1": "Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden … in die erste Vertiefung ein und verweilt darin. ",
   "an9.42:4.2": "Insoweit sprach der Buddha davon, eine Öffnung inmitten der Enge zu schaffen, in einem eingeschränkten Sinn. ",
   "an9.42:4.3": "Aber da ist immer noch Enge. ",
