--- a/translation/de/sabbamitta/sutta/an/an9/an9.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.38_translation-de-sabbamitta.json
@@ -34,7 +34,7 @@
   "an9.38:4.12": "Und warum? ",
   "an9.38:4.13": "Ich sage, es ist nicht möglich, das Ende der Welt durch solches Rennen zu erkennen oder zu sehen oder zu erreichen. ",
   "an9.38:4.14": "Doch ich sage auch, dass es nicht möglich ist, dem Leiden ein Ende zu machen, ohne ans Ende der Welt zu gelangen. ",
-  "an9.38:5.1": "Fünf Arten von Sinnesreizen werden in der Schulung des Edlen die Welt genannt. ",
+  "an9.38:5.1": "Fünf Arten sinnlicher Erregung werden in der Schulung des Edlen die Welt genannt. ",
   "an9.38:5.2": "Welche fünf? ",
   "an9.38:5.3": "Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "an9.38:5.4": "Töne, die das Ohr erkennt … ",
