--- a/translation/de/sabbamitta/sutta/mn/mn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn23_translation-de-sabbamitta.json
@@ -93,7 +93,7 @@
   "mn23:4.30": "Düfte, die die Nase erkennt … ",
   "mn23:4.31": "Geschmäcke, die die Zunge erkennt … ",
   "mn23:4.32": "Berührungen, die der Körper erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "mn23:4.33": "‚Wirf das Hackbeil und den Klotz fort‘ bedeutet ‚gib die fünf Arten von Sinnesreizen auf‘ … ",
+  "mn23:4.33": "‚Wirf das Hackbeil und den Klotz fort‘ bedeutet ‚gib die fünf Arten sinnlicher Erregung auf‘ … ",
   "mn23:4.34": " ",
   "mn23:4.35": "‚Fleischbrocken‘ ist ein Ausdruck für Genießen und Gier. ",
   "mn23:4.36": "‚Wirf den Fleischbrocken fort‘ bedeutet ‚gib Genießen und Gier auf‘ … ",
