--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -217,7 +217,7 @@
   "dn29:23.11": "Das ist die zweite Art des Schwelgens in Glück. ",
   "dn29:23.12": "Dann macht sich da jemand durch Lügen glücklich und zufrieden. ",
   "dn29:23.13": "Das ist die dritte Art des Schwelgens in Glück. ",
-  "dn29:23.14": "Dann ist da jemand mit den fünf Arten von Sinnesreizen versorgt und ausgestattet und vergnügt sich damit. ",
+  "dn29:23.14": "Dann ist da jemand mit den fünf Arten sinnlicher Erregung versorgt und ausgestattet und vergnügt sich damit. ",
   "dn29:23.15": "Das ist die vierte Art des Schwelgens in Glück. ",
   "dn29:23.16": "Diese vier Arten des Schwelgens in Glück sind nieder, derb, gewöhnlich, unedel und zwecklos. Sie führen nicht zu Ernüchterung, Schwinden der Leidenschaft, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen. ",
   "dn29:24.1": "Es ist möglich, dass Wanderer, die andere Wege gehen, sagen: ",
