--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -993,7 +993,7 @@
   "sn-name:1099.sn35.114": "Māras Schlinge (1) ",
   "sn-name:1100.sn35.115": "Māras Schlinge (2) ",
   "sn-name:1101.sn35.116": "Ans Ende der Welt gehen ",
-  "sn-name:1102.sn35.117": "Arten von Sinnesreizen ",
+  "sn-name:1102.sn35.117": "Arten sinnlicher Erregung ",
   "sn-name:1103.sn35.118": "Sakkas Fragen ",
   "sn-name:1104.sn35.119": "Pañcasikhas Fragen ",
   "sn-name:1105.sn35.120": "Sāriputta und der Schüler ",
