--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -207,5 +207,6 @@
   "mn95:19.11": "Paklydūnui nelengva būtų mokyti tokio mokymo.",
   "mn95:20.1": "Po to, kai ištyrinėjęs jį, jis mato, kad tas yra išsivalęs nuo sukeliančių paklydimą proto savybių,",
   "mn95:20.2": "jis įtiki juo, tikėdamas, jis nueina pas tą (mokytoją). Nuėjęs, jis laikosi arti jo; būdamas arti, jis klausosi; klausydamasis, jis išgirsta mokymą, išgirdęs mokymą, jis įsimena jį. Jis tyrinėja įsiminto mokymo prasmę; tyrinėdamas prasmę, po apmąstymo, jis priima mokymą. Priėmus mokymą po apmąstymo, kyla noras veikti; kylus norui veikti, jis deda pastangas. Įdėjęs pastangų, jis tikrina; patikrinęs, jis atkakliai siekia; atkakliai siekdamas, jis pats tiesiogiai patiria aukščiausią tiesą ir, perpratęs išmintimi, mato ją.",
-  "mn95:20.3": "Štai taip, Bharadvadžia, yra nusakomas tiesos supratimas, taip tiesa yra suprantama. Taip mes paaiškiname tiesos supratimą,"
+  "mn95:20.3": "Štai taip, Bharadvadžia, yra nusakomas tiesos supratimas, taip tiesa yra suprantama. Taip mes paaiškiname tiesos supratimą,",
+  "mn95:20.4": "bet tai dar nėra tiesos pasiekimas.”"
 }
