--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -210,5 +210,6 @@
   "mn95:20.3": "Štai taip, Bharadvadžia, yra nusakomas tiesos supratimas, taip tiesa yra suprantama. Taip mes paaiškiname tiesos supratimą,",
   "mn95:20.4": "bet tai dar nėra tiesos pasiekimas.”",
   "mn95:21.1": "„Taip, Gerbiamas Gotama, yra nusakomas tiesos supratimas. Mes matome tame tiesos supratimą. ",
-  "mn95:21.2": "Bet, Gerbiamas Gotama, kaip nusakomas tiesos pasiekimas, kaip tiesa yra pasiekiama?"
+  "mn95:21.2": "Bet, Gerbiamas Gotama, kaip nusakomas tiesos pasiekimas, kaip tiesa yra pasiekiama?",
+  "mn95:21.3": "Klausiame Gerbiamojo Gotamos apie tiesos pasiekimą.”"
 }
