--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -212,5 +212,6 @@
   "mn95:21.1": "„Taip, Gerbiamas Gotama, yra nusakomas tiesos supratimas. Mes matome tame tiesos supratimą. ",
   "mn95:21.2": "Bet, Gerbiamas Gotama, kaip nusakomas tiesos pasiekimas, kaip tiesa yra pasiekiama?",
   "mn95:21.3": "Klausiame Gerbiamojo Gotamos apie tiesos pasiekimą.”",
-  "mn95:21.4": "„Tų pačių dalykų, Bharadvadžia, kartojimas, lavinimas, puoselėjimas (nulemia) tiesos pasiekimą."
+  "mn95:21.4": "„Tų pačių dalykų, Bharadvadžia, kartojimas, lavinimas, puoselėjimas (nulemia) tiesos pasiekimą.",
+  "mn95:21.5": "Štai taip, Bharadvadžia, yra nusakomas tiesos pasiekimas, taip tiesa yra pasiekiama. Taip mes paaiškiname tiesos pasiekimą,"
 }
