--- a/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an11.17:0.3": "Der Kuhhirte ",
   "an11.17:1.1": "„Mönche und Nonnen, ein Kuhhirte, der elf Faktoren besitzt, kann keine Kuhherde erhalten und vergrößern. ",
   "an11.17:1.2": "Welche elf? ",
-  "an11.17:1.3": "Da weiß ein Kuhhirte nicht, was Form ist, kennt sich mit den Kennzeichen nicht aus, liest Fliegeneier nicht aus, verbindet Wunden nicht, räuchert Ungeziefer nicht aus, kennt die Furt nicht, kennt Zufriedenheit nicht, kennt den Weg nicht, kennt sich mit den Weiden nicht aus, melkt trocken und lässt den Bullen, den Vätern und Leitern der Herde, keine besondere Achtung angedeihen. ",
+  "an11.17:1.3": "Da weiß ein Kuhhirte nicht, was Form ist, kennt sich mit den Kennzeichen nicht aus, liest Fliegeneier nicht aus, verbindet Wunden nicht, räuchert Ungeziefer nicht aus, kennt die Furt nicht, kennt Zufriedenheit nicht, kennt den Weg nicht, kennt sich mit den Weiden nicht aus, melkt trocken und lässt den Bullen, den Vätern und Anführern der Herde, keine besondere Achtung angedeihen. ",
   "an11.17:1.4": "Ein Kuhhirte, der diese elf Faktoren besitzt, kann keine Kuhherde erhalten und vergrößern. ",
   "an11.17:2.1": "Ebenso kann ein Mönch oder eine Nonne mit elf Eigenschaften kein Wachstum, keine Zunahme oder Reife in dieser Lehre und Schulung erlangen. ",
   "an11.17:2.2": "Mit welchen elf? ",
