--- a/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an11.17:1.4": "Ein Kuhhirte, der diese elf Faktoren besitzt, kann keine Kuhherde erhalten und vergrößern. ",
   "an11.17:2.1": "Ebenso kann ein Mönch oder eine Nonne mit elf Eigenschaften kein Wachstum, keine Zunahme oder Reife in dieser Lehre und Schulung erlangen. ",
   "an11.17:2.2": "Mit welchen elf? ",
-  "an11.17:2.3": "Da weiß eine Nonne oder ein Mönch nicht, was Form ist, kennt sich mit den Kennzeichen nicht aus, liest Fliegeneier nicht aus, verbindet Wunden nicht, räuchert Ungeziefer nicht aus, kennt die Furt nicht, kennt Zufriedenheit nicht, kennt den Weg nicht, kennt sich mit den Weiden nicht aus, melkt trocken und lässt langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Leitern des Saṅgha, keine besondere Achtung angedeihen. ",
+  "an11.17:2.3": "Da weiß eine Nonne oder ein Mönch nicht, was Form ist, kennt sich mit den Kennzeichen nicht aus, liest Fliegeneier nicht aus, verbindet Wunden nicht, räuchert Ungeziefer nicht aus, kennt die Furt nicht, kennt Zufriedenheit nicht, kennt den Weg nicht, kennt sich mit den Weiden nicht aus, melkt trocken und lässt langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Anführern des Saṅgha, keine besondere Achtung angedeihen. ",
   "an11.17:3.1": "Und wie weiß ein Mönch nicht, was Form ist? ",
   "an11.17:3.2": "Da versteht ein Mönch nicht wahrhaftig, dass alle Form in den vier Grundelementen besteht oder von den vier Grundelementen abgeleitet ist. ",
   "an11.17:3.3": "So weiß ein Mönch nicht, was Form ist. ",
