--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "sn35.121:37.1": "„Aber wenn er unbeständig und Leiden ist und zugrunde gehen muss, kann man ihn dann so ansehen: ",
   "sn35.121:37.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn35.121:38.1": "„Nein, Herr.“ ",
-  "sn35.121:39.1": "„Sind Gedanken … "
+  "sn35.121:39.1": "„Sind Gedanken … ",
+  "sn35.121:41.1": "Ist Geistbewusstsein … "
 }
