--- a/translation/en/sujato/sutta/an/an4/an4.10_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an4/an4.10_translation-en-sujato.json
@@ -46,7 +46,7 @@
   "an4.10:7.4": "This is called detachment from views. ",
   "an4.10:7.5": "Such is detachment from sensual pleasures, future lives, and views. ",
   "an4.10:8.1": "And what is detachment from ignorance? ",
-  "an4.10:8.2": "It’s when you truly understand the six fields of contacts’ origin, ending, gratification, drawback, and escape, ",
+  "an4.10:8.2": "It’s when you truly understand the six fields of contact’s origin, ending, gratification, drawback, and escape, ",
   "an4.10:8.3": "so ignorance and unknowing of the six fields of contact don’t linger on inside. ",
   "an4.10:8.4": "This is called detachment from ignorance. ",
   "an4.10:8.5": "Such is detachment from sensual pleasures, future lives, views, and ignorance. ",
