--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -667,7 +667,7 @@
   "sn-blurbs:sn22.146": "Wenn jemand fortgezogen ist, soll er von den fünf Aggregaten äußerst ernüchtert sein. ",
   "sn-blurbs:sn22.147": "Wenn jemand fortgezogen ist, soll er bei den fünf Aggregaten die Unbeständigkeit beobachten. ",
   "sn-blurbs:sn22.148": "Wenn jemand fortgezogen ist, soll er bei den fünf Aggregaten das Leiden beobachten. ",
-  "sn-blurbs:sn22.149": "Wenn jemand fortgezogen ist, soll er bei den fünf Aggregaten das Nicht-Selbst beobachten. ",
+  "sn-blurbs:sn22.149": "Wenn jemand fortgezogen ist, soll er bei den fünf Aggregaten das beobachten, was ohne Selbst ist. ",
   "sn-blurbs:sn22.150": "Glück und Schmerz entstehen in einem, weil man die Aggregate ergreift. ",
   "sn-blurbs:sn22.151": "Die Vorstellungen „ich“ und „mein“ entstehen, weil man die Aggregate ergreift. ",
   "sn-blurbs:sn22.152": "Die Idee, man sei eins mit dem Weltall, entsteht, weil man die Aggregate ergreift. ",
