--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -662,8 +662,8 @@
   "sn-blurbs:sn22.141": "Gebt das Begehren nach dem, was Leiden ist, d. h. nach den fünf Aggregaten, auf. ",
   "sn-blurbs:sn22.142": "Gebt Sehnen und Begehren nach dem, was Leiden ist, d. h. nach den fünf Aggregaten, auf. ",
   "sn-blurbs:sn22.143": "Gebt das Sehnen nach dem, was ohne Selbst ist, d. h. nach den fünf Aggregaten, auf. ",
-  "sn-blurbs:sn22.144": "Gebt das Begehren nach dem, was nicht-selbst ist, d. h. nach den fünf Aggregaten, auf. ",
-  "sn-blurbs:sn22.145": "Gebt Sehnen und Begehren nach dem, was nicht-selbst ist, d. h. nach den fünf Aggregaten, auf. ",
+  "sn-blurbs:sn22.144": "Gebt das Begehren nach dem, was ohne Selbst ist, d. h. nach den fünf Aggregaten, auf. ",
+  "sn-blurbs:sn22.145": "Gebt Sehnen und Begehren nach dem, was ohne Selbst ist, d. h. nach den fünf Aggregaten, auf. ",
   "sn-blurbs:sn22.146": "Wenn jemand fortgezogen ist, soll er von den fünf Aggregaten äußerst ernüchtert sein. ",
   "sn-blurbs:sn22.147": "Wenn jemand fortgezogen ist, soll er bei den fünf Aggregaten die Unbeständigkeit beobachten. ",
   "sn-blurbs:sn22.148": "Wenn jemand fortgezogen ist, soll er bei den fünf Aggregaten das Leiden beobachten. ",
