--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -696,7 +696,7 @@
   "sn-blurbs:sn23.15": "Rādha fragt den Buddha nach dem Leiden, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.16": "Rādha fragt den Buddha nach Dingen, die ihrer Natur nach Leiden sind, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.17": "Rādha fragt den Buddha nach dem, was ohne Selbst ist, und dieser antwortet in Begriffen der fünf Aggregate. ",
-  "sn-blurbs:sn23.18": "Rādha fragt den Buddha nach Dingen, die ihrer Natur nach nicht-selbst sind, und dieser antwortet in Begriffen der fünf Aggregate. ",
+  "sn-blurbs:sn23.18": "Rādha fragt den Buddha nach Dingen, die ihrer Natur nach ohne Selbst sind, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.19": "Rādha fragt den Buddha nach Dingen, die enden müssen, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.20": "Rādha fragt den Buddha nach Dingen, die verschwinden müssen, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.21": "Rādha fragt den Buddha nach Dingen, die entstehen müssen, und dieser antwortet in Begriffen der fünf Aggregate. ",
