--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -769,7 +769,7 @@
   "sn-blurbs:sn35.56": "Ein Mönch fragt den Buddha, wie man sehen soll, sodass die Befleckungen aufgegeben werden. Der Buddha sagt, man solle die sechs inneren und äußeren Sinnesfelder als unbeständig sehen. ",
   "sn-blurbs:sn35.57": "Ein Mönch fragt den Buddha, wie man sehen soll, sodass die Befleckungen entwurzelt werden. Der Buddha sagt, man solle die sechs inneren und äußeren Sinnesfelder als ohne Selbst sehen. ",
   "sn-blurbs:sn35.58": "Ein Mönch fragt den Buddha, wie man sehen soll, sodass die zugrunde liegenden Neigungen aufgegeben werden. Der Buddha sagt, man solle die sechs inneren und äußeren Sinnesfelder als unbeständig sehen. ",
-  "sn-blurbs:sn35.59": "Ein Mönch fragt den Buddha, wie man sehen soll, sodass die zugrunde liegenden Neigungen entwurzelt werden. Der Buddha sagt, man solle die sechs inneren und äußeren Sinnesfelder als nicht-selbst sehen. ",
+  "sn-blurbs:sn35.59": "Ein Mönch fragt den Buddha, wie man sehen soll, sodass die zugrunde liegenden Neigungen entwurzelt werden. Der Buddha sagt, man solle die sechs inneren und äußeren Sinnesfelder als ohne Selbst sehen. ",
   "sn-blurbs:sn35.60": "Um Ergreifen vollständig zu verstehen, soll man betrachten, wie Sinneserfahrung zu Gefühlen führt. ",
   "sn-blurbs:sn35.61": "Um Ergreifen zu beenden, soll man betrachten, wie Sinneserfahrung zu Gefühlen führt. ",
   "sn-blurbs:sn35.62": "Um Ergreifen zu beenden, soll man die Sinnesfelder als unbeständig usw. betrachten. ",
