--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -488,7 +488,7 @@
   "sn-blurbs:sn18.10": "Der Buddha entspricht Rāhulas Bitte nach einer kurzen Unterweisung und lehrt die fünf Aggregate im Licht der drei Kennzeichen. ",
   "sn-blurbs:sn18.11": "Der Buddha lehrt Rāhula die inneren Sinnesfelder im Licht der drei Kennzeichen. ",
   "sn-blurbs:sn18.12-20": "Der Buddha lehrt Rāhula die Sinne, Aggregate und Elemente im Licht der drei Kennzeichen. ",
-  "sn-blurbs:sn18.21": "Der Ehrwürdige Rāhula fragt, wie man erkennen soll, sodass Einbildung nicht mehr vorkommt. Der Buddha lehrt ihn, die fünf Aggregate im Hinblick auf Nicht-selbst zu untersuchen. ",
+  "sn-blurbs:sn18.21": "Der Ehrwürdige Rāhula fragt, wie man erkennen soll, sodass Einbildung nicht mehr vorkommt. Der Buddha lehrt ihn, die fünf Aggregate im Hinblick auf das Fehlen eines Selbst zu untersuchen. ",
   "sn-blurbs:sn18.22": "Der Ehrwürdige Rāhula fragt, wie man erkennen soll, sodass Einbildung nicht mehr vorkommt und man friedvoll ist. Der Buddha lehrt ihn, die fünf Aggregate im Hinblick auf Nicht-selbst zu untersuchen. ",
   "sn-blurbs:sn19": "Die „Verbundenen Lehrreden mit Lakkhaṇa“ enthalten 21 Lehrreden, in denen der Buddha mit den Mönchen Lakkhaṇa („Kennzeichen“) und Mahāmoggallāna spricht. Durch seine Wunderkraft sieht Mahāmoggallāna Wesen in verschiedenen Zuständen von Folter und Bedrängnis, die er dem Buddha und seinem Mitmönch beschreibt. ",
   "sn-blurbs:sn19.1": "Als er zu seinem Almosengang die Geierkuppe hinuntersteigt, lächelt der Ehrwürdige Moggallāna. Später berichtet er dem Buddha und dem Ehrwürdigen Lakkhaṇa, dass er ein Skelett durch die Luft fliegen sah, das von Raubvögeln verfolgt wurde. Der Buddha fügt hinzu, dass dieses Wesen in seinem früheren Leben ein Metzger war. ",
