--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -529,7 +529,7 @@
   "sn-blurbs:sn22.8": "Ein gewöhnlicher Mensch setzt sein Selbst mit den fünf Aggregaten gleich und wenn diese sich ändern, wird ihm bange. Einem edler Schüler, der dieses nicht tut, ist nicht bange. ",
   "sn-blurbs:sn22.9": "Die Aggregate waren in der Vergangenheit ebenso unbeständig, wie sie es in der Gegenwart sind, und werden das auch in der Zukunft sein. ",
   "sn-blurbs:sn22.10": "Die Aggregate waren in der Vergangenheit ebenso mit Leiden behaftet, wie sie es in der Gegenwart sind, und werden das auch in der Zukunft sein. ",
-  "sn-blurbs:sn22.11": "Die Aggregate waren in der Vergangenheit ebenso nicht-selbst, wie sie es in der Gegenwart sind, und werden das auch in der Zukunft sein. ",
+  "sn-blurbs:sn22.11": "Die Aggregate waren in der Vergangenheit ebenso ohne Selbst, wie sie es in der Gegenwart sind, und werden das auch in der Zukunft sein. ",
   "sn-blurbs:sn22.12": "Weil die Aggregate unbeständig sind, wird ein edler Schüler von ihnen ernüchtert. ",
   "sn-blurbs:sn22.13": "Weil die Aggregate Leiden sind, wird ein edler Schüler von ihnen ernüchtert. ",
   "sn-blurbs:sn22.14": "Weil die Aggregate nicht-selbst sind, wird ein edler Schüler von ihnen ernüchtert. ",
