--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -532,7 +532,7 @@
   "sn-blurbs:sn22.11": "Die Aggregate waren in der Vergangenheit ebenso ohne Selbst, wie sie es in der Gegenwart sind, und werden das auch in der Zukunft sein. ",
   "sn-blurbs:sn22.12": "Weil die Aggregate unbeständig sind, wird ein edler Schüler von ihnen ernüchtert. ",
   "sn-blurbs:sn22.13": "Weil die Aggregate Leiden sind, wird ein edler Schüler von ihnen ernüchtert. ",
-  "sn-blurbs:sn22.14": "Weil die Aggregate nicht-selbst sind, wird ein edler Schüler von ihnen ernüchtert. ",
+  "sn-blurbs:sn22.14": "Weil die Aggregate ohne Selbst sind, wird ein edler Schüler von ihnen ernüchtert. ",
   "sn-blurbs:sn22.15": "Man soll die fünf Aggregate wahrhaftig als unbeständig verstehen. ",
   "sn-blurbs:sn22.16": "Man soll die fünf Aggregate wahrhaftig als Leiden verstehen. ",
   "sn-blurbs:sn22.17": "Man soll die fünf Aggregate wahrhaftig als nicht-selbst verstehen. ",
