--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -535,7 +535,7 @@
   "sn-blurbs:sn22.14": "Weil die Aggregate ohne Selbst sind, wird ein edler Schüler von ihnen ernüchtert. ",
   "sn-blurbs:sn22.15": "Man soll die fünf Aggregate wahrhaftig als unbeständig verstehen. ",
   "sn-blurbs:sn22.16": "Man soll die fünf Aggregate wahrhaftig als Leiden verstehen. ",
-  "sn-blurbs:sn22.17": "Man soll die fünf Aggregate wahrhaftig als nicht-selbst verstehen. ",
+  "sn-blurbs:sn22.17": "Man soll die fünf Aggregate wahrhaftig als ohne Selbst verstehen. ",
   "sn-blurbs:sn22.18": "Wenn die Ursachen der Aggregate unbeständig sind, wie können da die Aggregate beständig sein? ",
   "sn-blurbs:sn22.19": "Wenn die Ursachen der Aggregate Leiden sind, wie können da die Aggregate Glück sein? ",
   "sn-blurbs:sn22.20": "Wenn die Ursachen der Aggregate nicht-selbst sind, wie können da die Aggregate ein Selbst sein? ",
