--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -577,7 +577,7 @@
   "sn-blurbs:sn22.56": "Der Buddha hat nicht behauptet, erwacht zu sein, bevor er nicht jedes der fünf Aggregate im Licht jeder der vier edlen Wahrheiten vollkommen verstanden hatte. Diese Lehrrede enthält Definitionen der fünf Aggregate. ",
   "sn-blurbs:sn22.57": "Um wirklich vollendet zu sein, sollten Mönche und Nonnen die fünf Aggregate im Licht der vier edlen Wahrheiten sowie ihrer vorteilhaften und nachteiligen Folgen und des Entrinnens untersuchen. Dazu sollten sie auch die Elemente, Sinnesfelder und das abhängige Entstehen untersuchen. ",
   "sn-blurbs:sn22.58": "Der Buddha erklärt, dass sowohl er selbst als auch durch Weisheit befreite Mönche und Nonnen durch Nicht-Ergreifen in Bezug auf die Aggregate befreit sind. Dann erklärt er den Unterschied zwischen ihm und diesen befreiten Mönchen und Nonnen. ",
-  "sn-blurbs:sn22.59": "Im Wildpark bei Varanasi hält der Buddha vor der Gruppe der fünf Mönche seine berühmte zweite Lehrrede über das Nicht-Selbst in Bezug auf die Aggregate. Am Ende werden alle Vollendete. ",
+  "sn-blurbs:sn22.59": "Im Wildpark bei Varanasi hält der Buddha vor der Gruppe der fünf Mönche seine berühmte zweite Lehrrede darüber, dass die Aggregate ohne Selbst sind. Am Ende werden alle Vollendete. ",
   "sn-blurbs:sn22.60": "Der Licchaver Mahāli berichtet dem Buddha, dass Pūraṇa Kassapa, der Lehrer einer anderen Sekte, behauptet, Lebewesen seien ohne Grund befleckt oder rein. Der Buddha weist das zurück und erklärt, wie es tatsächlich ist. ",
   "sn-blurbs:sn22.61": "Die fünf Aggregate brennen. ",
   "sn-blurbs:sn22.62": "Alle Philosophen müssen akzeptieren, dass die fünf Aggregate in einer Sprache beschrieben werden, die sich entweder auf Vergangenheit, Zukunft oder Gegenwart bezieht. ",
