--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -72,7 +72,7 @@
   "dn15:13.1": "‚Anhänglichkeit ist ein Ausgangspunkt für Eigentum‘ – das habe ich gesagt. Eine Art, zu verstehen, wie das gemeint ist, ist diese: ",
   "dn15:13.2": "Angenommen, es gäbe ganz und gar überhaupt keine Anhänglichkeit, nirgends und für niemanden. Wenn es überhaupt keine Anhänglichkeit gäbe, mit dem Aufhören der Anhänglichkeit, gäbe es da noch Eigentum?“ ",
   "dn15:13.3": "„Nein, Herr.“ ",
-  "dn15:13.4": "„Darum ist das der Grund, die Quelle, der Ursprung und die Bedingung für Eigentum: nämlich Anhänglichkeit. ",
+  "dn15:13.4": "„Darum ist das der Grund, die Quelle, der Ursprung und die Ursache für Eigentum: nämlich Anhänglichkeit. ",
   "dn15:14.1": "‚Sehnen und Begehren sind ein Ausgangspunkt für Anhänglichkeit‘ – das habe ich gesagt. Eine Art, zu verstehen, wie das gemeint ist, ist diese: ",
   "dn15:14.2": "Angenommen, es gäbe ganz und gar überhaupt kein Sehnen und kein Begehren, nirgends und für niemanden. Wenn es überhaupt kein Sehnen und kein Begehren gäbe, mit dem Aufhören des Sehnens und Begehrens, gäbe es da noch Anhänglichkeit?“ ",
   "dn15:14.3": "„Nein, Herr.“ ",
