--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -76,7 +76,7 @@
   "dn15:14.1": "‚Sehnen und Begehren sind ein Ausgangspunkt für Anhänglichkeit‘ – das habe ich gesagt. Eine Art, zu verstehen, wie das gemeint ist, ist diese: ",
   "dn15:14.2": "Angenommen, es gäbe ganz und gar überhaupt kein Sehnen und kein Begehren, nirgends und für niemanden. Wenn es überhaupt kein Sehnen und kein Begehren gäbe, mit dem Aufhören des Sehnens und Begehrens, gäbe es da noch Anhänglichkeit?“ ",
   "dn15:14.3": "„Nein, Herr.“ ",
-  "dn15:14.4": "„Darum ist das der Grund, die Quelle, der Ursprung und die Bedingung für Anhänglichkeit: nämlich Sehnen und Begehren. ",
+  "dn15:14.4": "„Darum ist das der Grund, die Quelle, der Ursprung und die Ursache für Anhänglichkeit: nämlich Sehnen und Begehren. ",
   "dn15:15.1": "‚Bewerten ist ein Ausgangspunkt für Sehnen und Begehren‘ – das habe ich gesagt. Eine Art, zu verstehen, wie das gemeint ist, ist diese: ",
   "dn15:15.2": "Angenommen, es gäbe ganz und gar überhaupt kein Bewerten, nirgends und für niemanden. Wenn es überhaupt kein Bewerten gäbe, mit dem Aufhören des Bewertens, gäbe es da noch Sehnen und Begehren?“ ",
   "dn15:15.3": "„Nein, Herr.“ ",
