--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "sn22.60:1.2": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
   "sn22.60:1.3": "Da ging der Licchaver Mahāli zum Buddha … und sagte zu ihm: ",
   "sn22.60:2.1": "„Herr, Pūraṇa Kassapa sagt: ",
-  "sn22.60:2.2": "‚Es gibt keine Ursache oder Bedingung für die Verunreinigung der Lebewesen. ",
+  "sn22.60:2.2": "‚Es gibt keinen Grund und keine Ursache für die Verunreinigung der Lebewesen. ",
   "sn22.60:2.3": "Lebewesen werden ohne Ursache oder Bedingung verunreinigt. ",
   "sn22.60:2.4": "Es gibt keine Ursache oder Bedingung für die Läuterung der Lebewesen. ",
   "sn22.60:2.5": "Lebewesen werden ohne Ursache oder Bedingung geläutert.‘ ",
