--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn22.60:1.3": "Da ging der Licchaver Mahāli zum Buddha … und sagte zu ihm: ",
   "sn22.60:2.1": "„Herr, Pūraṇa Kassapa sagt: ",
   "sn22.60:2.2": "‚Es gibt keinen Grund und keine Ursache für die Verunreinigung der Lebewesen. ",
-  "sn22.60:2.3": "Lebewesen werden ohne Ursache oder Bedingung verunreinigt. ",
+  "sn22.60:2.3": "Lebewesen werden ohne Grund oder Ursache verunreinigt. ",
   "sn22.60:2.4": "Es gibt keine Ursache oder Bedingung für die Läuterung der Lebewesen. ",
   "sn22.60:2.5": "Lebewesen werden ohne Ursache oder Bedingung geläutert.‘ ",
   "sn22.60:2.6": "Was sagt der Buddha dazu?“ ",
