--- a/translation/de/sabbamitta/sutta/an/an6/an6.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.55_translation-de-sabbamitta.json
@@ -54,7 +54,7 @@
   "an6.55:15.1": "Er weiht sich dem Beenden des Ergreifens, weil er mit dem Ende von Gier, Hass und Täuschung von Gier, Hass und Täuschung frei ist. ",
   "an6.55:16.1": "Er weiht sich der geistigen Klarheit, weil er mit dem Ende von Gier, Hass und Täuschung von Gier, Hass und Täuschung frei ist. ",
   "an6.55:17.1": "Wenn der Geist eines Mönchs so befreit ist, werden einnehmende Bilder, selbst wenn sie in sein Blickfeld gelangen, seinen Geist nicht gefangen halten. ",
-  "an6.55:17.2": "Der Geist bleibt unberührt. Er ist stetig, unerregt und beobachtet das Verschwinden. ",
+  "an6.55:17.2": "Der Geist bleibt unberührt. Er ist stetig, unbewegt und beobachtet das Verschwinden. ",
   "an6.55:17.3": "Wenn der Geist eines Mönchs so befreit ist, werden einnehmende Töne … ",
   "an6.55:17.4": "Düfte … ",
   "an6.55:17.5": "Geschmäcke … ",
